Add Pug, PostCSS, media-queries, simple grid-system, etc.

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -17,3 +17,12 @@ $text-color-light: #9facbd;
 $primary-color: #0facf3;
 $secondary-color: #9574EA;
 $tertiary-color: #FFD500;
+
+/*
+GRID
+*/
+
+$grid-width: 71.25em;
+$gutter-vertical: 5em;
+$gutter-vertical-small: 3em;
+$gutter-horizontal: 5em;
