--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -8,6 +8,7 @@ FONTS
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
-  line-height: 1.7;
+  line-height: 1.5;
   color: $text-color;
+  font-size: 1.6em;
 }
