--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,10 @@
 @import "abstracts/variables";
 @import "abstracts/functions";
 @import "abstracts/mixins";
+@import "vendors/font-awesome-all-5.13";
 
 @import "base/base";
-// @import "base/animations";
 @import "base/typography";
 @import "base/utilities";
+
+@import "layout/grid";
