Fix pug to not output files in includes folder

--- a/pug/templates/index.pug
+++ b/pug/templates/index.pug
@@ -1,9 +1,9 @@
 doctype html
 html(lang="en")
-  include includes/head
+  include ../includes/head
   body
     - const styles={"font-size": "10vw", "color": "coral", "text-align": "center", "margin-top": "5rem"}
-    h1(style=styles) Happy coding! ;)
+    h1(style=styles) Happy coding!;)
     
     //- <section class="grid-test">
       <div class="row">
