--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,3 +8,8 @@
 @import "base/utilities";
 
 @import "layout/grid";
+
+// You can remove these
+@import "components/components";
+@import "pages/pages";
+@import "themes/themes";
